# PhysicsEngine

./: .gitignore  CMakeLists.txt  Readme.md
dependencies/: CMakeLists.txt
dependencies/Raylib/: CMakeLists.txt
dependencies/SquirrelNoise/: CMakeLists.txt
dependencies/entt/: CMakeLists.txt
dependencies/flecs/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/thread-pool/: CMakeLists.txt
include/PhysicsEngine/: Utils.hpp  World.hpp
include/PhysicsEngine/Components/: RigidBody.hpp  Shape.hpp  Transform.hpp
include/PhysicsEngine/Debug/: Assert.hpp
include/PhysicsEngine/Object/: Object.hpp
include/PhysicsEngine/Physics/: BroadPhaseBrut.h
include/PhysicsEngine/Scene/: Scene.hpp  SceneBase.hpp  SceneBouncingPoly.hpp  SceneDebug.hpp  SceneManager.hpp  World.hpp
include/PhysicsEngine/System/: AABBGenerationSystem.hpp  BroadPhaseSystem.hpp  DrawSystem.hpp  InputSystem.hpp  NarrowPhaseSystem.hpp  PhysicsSystem.hpp  SweepAndPruneSystem.hpp  System.hpp  TransformSystem.hpp
include/PhysicsEngine/Time/: Timer.hpp
include/PhysicsEngine/Tools/: Maths.hpp  RandomUtils.hpp
src/: World.cpp  main.cpp
src/Components/: RigidBody.cpp  Shape.cpp  Transform.cpp
src/Object/: Object.cpp
src/Scene/: Scene.cpp  SceneBase.cpp  SceneBouncingPoly.cpp  SceneDebug.cpp  SceneManager.cpp  World.cpp
src/System/: AABBGenerationSystem.cpp  BroadPhaseSystem.cpp  DrawSystem.cpp  InputSystem.cpp  NarrowPhaseSystem.cpp  PhysicsSystem.cpp  SweepAndPruneSystem.cpp  System.cpp  TransformSystem.cpp
src/Time/: Timer.cpp
src/Tools/: Maths.cpp
